# jixiebi0527

./: README.md
jixiebi0527/orchard_picker/: README.md  package.xml
jixiebi0527/orchard_picker/config/: picker_params.yaml
jixiebi0527/orchard_picker/launch/: fake_target_demo.launch.py
jixiebi0527/orchard_picker/scripts/: fake_apple_target.py  pick_task_manager.py  raw_json_cli.py  t930_arm_net_check.sh
jixiebi0527/orchard_picker/src/orchard_picker/: protocol.py
jixiebi0527/orchard_picker/srv/: GripperPosition.srv  GripperRelease.srv  MoveJ.srv  RawJson.srv
launch/: orchard_picker.launch.py
orchard_picker/: CMakeLists.txt  README.md  setup.py
orchard_picker/config/: picker_params.yaml
orchard_picker/launch/: driver_only.launch.py  orchard_picker.launch.py
orchard_picker/scripts/: hand_eye_static_tf_publisher.py  pick_task_manager.py  rm_json_bridge.py  t930_arm_net_check.sh  tcp_tf_publisher.py
orchard_picker/src/orchard_picker/: __init__.py  realman_json_client.py
orchard_picker/srv/: GetArmState.srv  GripperPick.srv  MovePose.srv  SetToolVoltage.srv
scripts/: rm_json_bridge.py
src/orchard_picker/: realman_json_client.py
